// Test Documentation
syntax = "proto3";
import "google/protobuf/timestamp.proto";
package grpc;

// Heartbeat
service RpcService {
    // Common Interfaces
    rpc isReady (ReadyRequest) returns (ReadyResponse);
    rpc updateNodes (UpdateNodesRequest) returns (UpdateNodesResponse);
    rpc updateNoFlyZones (UpdateNoFlyZonesRequest) returns (UpdateNoFlyZonesResponse);
}

// Ready Request object
message ReadyRequest {
    // No arguments
}

// Ready Response object
message ReadyResponse {

    // True if ready
    bool ready = 1;
}

// Geospatial Coordinates
message Coordinates {
    // Latitude Coordinate
    float latitude = 1;

    // Longitude Coordinate
    float longitude = 2;
}

// Node Type
enum NodeType {
    // Waypoint
    WAYPOINT = 0;

    // Vertiport
    VERTIPORT = 1;
}

// Points in space used for routing (waypoints, vertiports, etc.)
message Node {
    // Unique Arrow ID
    string uuid = 1;

    // Latitude Coordinate
    Coordinates location = 2;

    // Node Type
    NodeType node_type = 3;
}

// Update Nodes Request object
message UpdateNodesRequest {
    // Nodes to update
    repeated Node nodes = 1;
}

// Update Nodes Response object
message UpdateNodesResponse {

    // True if updated
    bool updated = 1;
}

// Points in space used for routing (waypoints, vertiports, etc.)
message NoFlyZone {
    // Unique label (NOTAM id, etc.)
    string label = 1;

    // Vertices bounding the No-Fly Zone
    // The first vertex should match the end vertex (closed shape)
    repeated Coordinates vertices = 2;

    // Start datetime for this zone
    google.protobuf.Timestamp time_start = 3;

    // End datetime for this zone
    google.protobuf.Timestamp time_end = 4;

    // If this is a no-fly centered around a vertiport, provide UUID
    optional string vertiport_id = 5;
}

// Update No Fly Zones Request object
message UpdateNoFlyZonesRequest {
    // Nodes to update
    repeated NoFlyZone zones = 1;
}

// Update No Fly Zones Response object
message UpdateNoFlyZonesResponse {

    // True if updated
    bool updated = 1;
}
